--- a/index.html
+++ b/index.html
@@ -339,5 +339,23 @@
       </div>
     </div>
   </section>
+
+  <section>
+    <div class="page-first">
+      <div class="container flexx">
+        <div class="parts-one">
+          <h1>Get in touch with us for your service</h1>
+        </div>
+        <div class="parts-two">
+          <p>Help line Noumber</p>
+          <h2>1800 265 24 52</h2>
+          <p>Adress</p>
+          <h2>NH 234 Public Square San Francisco 65368</h2>
+          <p>We are open</p>
+          <h2>Monday to Friday 9:00 AM to  10:00  AM</h2>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
