Worked on Mobile view

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="view-port">
     <div class="container">
       <div class="header-one flex align">
         <div class="part-one">
@@ -37,9 +37,10 @@
           </div>
         </div>
       </div>
+    </div>
   </header>
 
-  <section>
+  <section class="view-port">
     <div class="container">
       <div class="header-one flex align">
         <div class="text-part">
@@ -64,7 +65,7 @@
   </section>
 
   <section>
-    <div class="container-two">
+    <div id="view-port-three">
       <div class="container">
         <div class="header-one flex">
           <div class="text-part">
@@ -335,24 +336,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="page-first">
-      <div class="container flexx">
-        <div class="parts-one">
-          <h1>Get in touch with us for your service</h1>
-        </div>
-        <div class="parts-two">
-          <p>Help line Noumber</p>
-          <h2>1800 265 24 52</h2>
-          <p>Adress</p>
-          <h2>NH 234 Public Square San Francisco 65368</h2>
-          <p>We are open</p>
-          <h2>Monday to Friday 9:00 AM to  10:00  AM</h2>
         </div>
       </div>
     </div>
