Mobile view complete

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="part-two flex align">
           <div class="links">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="https://safesquare.github.io/Services/">Home</a></li>
+              <li><a href="https://safesquare.github.io/Services/">About us</a></li>
+              <li><a href="https://safesquare.github.io/Services/">Services</a></li>
+              <li><a href="https://safesquare.github.io/Services/">Blog</a></li>
+              <li><a href="https://safesquare.github.io/Services/">Contact</a></li>
             </ul>
           </div>
           <div class="part-three flex align">
@@ -47,7 +47,7 @@
           <h1>
             Get your vehicle service done online at one place
           </h1>
-          <a href="#">Book a service</a>
+          <a href="https://safesquare.github.io/Services/">Book a service</a>
           <div class="acess-point flex align">
             <img src="images/Icon.png" alt="">
             <div>
@@ -102,7 +102,7 @@
               <h4>Through True Rich Attended does no end it his mother since real had half every him.</h4>
             </div>
             <div id="link-two">
-              <a href="">Know more about us<span> &#8594;</span></a>
+              <a href="https://safesquare.github.io/Services/">Know more about us<span> &#8594;</span></a>
             </div>
           </div>
           <div class="image-part">
@@ -128,7 +128,7 @@
                       <input type="text" id="" maxlength="20" placeholder="Your phone number" />
                     </div>
                     <div class="button">
-                      <a href="#">Get your quote</a>
+                      <a href="https://safesquare.github.io/Services/">Get your quote</a>
                     </div>
                   </div>
                 </form>
@@ -147,7 +147,7 @@
             <h2>We follow a clear process to help you <br> out.</h2>
             <p>Through True Rich Attended does no end it his mother <br>since real had half every him case in packages
               enquire</p>
-            <a href="" class="orange-btn">Learn more</a>
+            <a href="https://safesquare.github.io/Services/" class="orange-btn">Learn more</a>
           </div>
           <div class="row-one-process">
             <div class="flex">
@@ -238,7 +238,7 @@
           </div>
         </div>
         <div class="flex forte-link">
-          <a href="">Learn about services<span> &#8594;</span></a>
+          <a href="https://safesquare.github.io/Services/">Learn about services<span> &#8594;</span></a>
         </div>
       </div>
   </section>
@@ -251,7 +251,7 @@
             <div class="flexbox-text">
               <h4>Get in touch with us for your service related query</h4>
               <div class="button">
-                <a href="#" class="black-btn">Contact Us</a>
+                <a href="https://safesquare.github.io/Services/" class="black-btn">Contact Us</a>
               </div>
             </div>
           </div>
