--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header class="view-port">
+  <header class="main-section">
     <div class="container">
       <div class="header-one flex align">
         <div class="part-one">
@@ -40,7 +40,7 @@
     </div>
   </header>
 
-  <section class="view-port">
+  <section class="main-section">
     <div class="container">
       <div class="header-one flex align">
         <div class="text-part">
@@ -64,7 +64,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="main-section">
     <div id="view-port-three">
       <div class="container">
         <div class="header-one flex">
@@ -139,7 +139,7 @@
       </div>
   </section>
 
-  <section>
+  <section class="main-section">
     <div class="row-one">
       <div class="container">
         <div class="flex">
@@ -188,7 +188,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="main-section">
     <div id="our-forte" class="row-two">
       <div class="container">
         <h4>What we Offer</h4>
@@ -243,7 +243,7 @@
       </div>
   </section>
 
-  <section>
+  <section class="main-section">
     <div class="row-two">
       <div class="flex">
         <div class="contact-bg">
@@ -285,7 +285,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="main-section">
     <div class="brands">
       <div class="container">
         <div class="our-brands">
