Mobile and Tablet view

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +9,7 @@
 </head>
 
 <body>
-  <header class="main-section">
+  <header>
     <div class="container">
       <div class="header-one flex align">
         <div class="part-one">
@@ -40,7 +39,7 @@
     </div>
   </header>
 
-  <section class="main-section">
+  <section>
     <div class="container">
       <div class="header-one flex align">
         <div class="text-part">
@@ -64,7 +63,7 @@
     </div>
   </section>
 
-  <section class="main-section">
+  <section>
     <div id="view-port-three">
       <div class="container">
         <div class="header-one flex">
@@ -139,7 +138,7 @@
       </div>
   </section>
 
-  <section class="main-section">
+  <section>
     <div class="row-one">
       <div class="container">
         <div class="flex">
@@ -188,7 +187,7 @@
     </div>
   </section>
 
-  <section class="main-section">
+  <section>
     <div id="our-forte" class="row-two">
       <div class="container">
         <h4>What we Offer</h4>
@@ -243,7 +242,7 @@
       </div>
   </section>
 
-  <section class="main-section">
+  <section>
     <div class="row-two">
       <div class="flex">
         <div class="contact-bg">
@@ -285,7 +284,7 @@
     </div>
   </section>
 
-  <section class="main-section">
+  <section>
     <div class="brands">
       <div class="container">
         <div class="our-brands">
