--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <section>
     <div class="row-one">
       <div class="container">
-        <div class="flex">
+        <div class="purple flex">
           <div class="row-one-text">
             <h2>We follow a clear process to help you <br> out.</h2>
             <p>Through True Rich Attended does no end it his mother <br>since real had half every him case in packages
